[Extensions UI Mac] Don't let the top-level actions container be first responder

The overflow browser actions container needs to accept first responder in order
to allow in-menu keyboard navigation; however, the top-level container doesn't
need to do this. Don't allow it to become first responder so that focus travels
correctly between the omnibox and either the first action or the wrench menu.

BUG=592825

Review URL: https://codereview.chromium.org/1782513002

Cr-Commit-Position: refs/heads/master@{#380197}

Former-commit-id: dc68af6738e9b8f5c1d2546f67d2bb145e9f74b5